syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{

rpc GetCustomerInfo (CustomerLookupModelRequest ) returns (CustomerModel);
rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}
message NewCustomerRequest{

}

message CustomerLookupModelRequest{
	int32 userID=1;
}

message CustomerModel{
	string firstName=1;
	string lastName=2;
	string eMailAddress=3;
	bool isAlive=4;
	int32 age=5; 
}